// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GithubWiki should not output single page sidebar 1`] = `
[
  "home.md",
]
`;

exports[`GithubWiki should output default sidebar 1`] = `
"## API

- [module-1](module-1/home)
- [module-2](module-2/home)
"
`;

exports[`GithubWiki should output globals sidebar 1`] = `
"## API

### Classes

- [ClassA](classes/ClassA)
- [ClassB](classes/ClassB)

### Interfaces

- [InterfaceA](interfaces/InterfaceA)
- [InterfaceB](interfaces/InterfaceB)
"
`;

exports[`GithubWiki should output index docs 1`] = `
"# typedoc-gitlab-wiki-theme

## Modules

- [module-1](./module-1/home)
- [module-2](./module-2/home)
"
`;

exports[`GithubWiki should output member docs 1`] = `
"[typedoc-gitlab-wiki-theme](../../home) / [module-1](../home) / ClassA

# Class: ClassA

## Constructors

### new ClassA()

> **new ClassA**(): \`ClassA\`

#### Returns

\`ClassA\`
"
`;

exports[`GithubWiki should output single modules sidebar 1`] = `
"## API

- [module-1](module-1/home)
- [module-2](module-2)
"
`;
